--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ theme:
     text: Roboto
     code: Roboto Mono
   favicon: assets/images/favicon.png
-  logo: assets/images/favicon.png
+  logo: assets/images/logo.png
   # icon:
   #   logo: logo
 
@@ -115,6 +115,10 @@ extra_css:
 nav:
   - 关于本书:
     - chapter_about/index.md
+    - 如何使用本书: chapter_about/how_to_read.md
+    - 编程环境安装: chapter_about/installation.md
+    - 一起参与创作: chapter_about/contribution.md
+    - License: chapter_about/license.md
   - 算法无处不在: 
     - chapter_introduction/index.md
   - 计算复杂度:
@@ -131,22 +135,26 @@ nav:
     - 小结: chapter_data_structure/summary.md
   - 数组与链表: 
     - chapter_array_and_linkedlist/index.md
-    - 数组: chapter_array_and_linkedlist/array.md
-    - 链表: chapter_array_and_linkedlist/linked_list.md
-    - 列表: chapter_array_and_linkedlist/list.md
+    - 数组（Array）: chapter_array_and_linkedlist/array.md
+    - 链表（LinkedList）: chapter_array_and_linkedlist/linked_list.md
+    - 列表（List）: chapter_array_and_linkedlist/list.md
     - 小结: chapter_array_and_linkedlist/summary.md
   - 栈与队列:
     - chapter_stack_and_queue/index.md
-    - 栈: chapter_stack_and_queue/stack.md
-    - 队列: chapter_stack_and_queue/queue.md
-    - 双向队列: chapter_stack_and_queue/deque.md
+    - 栈（Stack）: chapter_stack_and_queue/stack.md
+    - 队列（Queue）: chapter_stack_and_queue/queue.md
+    - 双向队列（Deque）: chapter_stack_and_queue/deque.md
     - 小结: chapter_stack_and_queue/summary.md
-  - 树:
+  - 二叉树:
     - chapter_tree/index.md
-    - 二叉树: chapter_tree/binary_tree.md
-    - 满二叉树: chapter_tree/perfect_complete_full_binary_tree.md
+    - 二叉树（Binary Tree）: chapter_tree/binary_tree.md
+    - 二叉树常见类型: chapter_tree/binary_tree_types.md
     - 二叉搜索树: chapter_tree/binary_search_tree.md
-    - 平衡二叉树: chapter_tree/balanced_binary_tree.md
     - 小结: chapter_tree/summary.md
-  - License:
-    - chapter_license/index.md
+  - 查找算法:
+    - chapter_searching/index.md
+    - 线性查找: chapter_searching/linear_search.md
+    - 二分查找: chapter_searching/binary_search.md
+    - 小结: chapter_searching/summary.md
+  - 参考文献:
+    - chapter_reference/index.md
