--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,19 +113,19 @@ extra_css:
 
 # Page tree
 nav:
-  - 关于本书:
-    - chapter_about/index.md
-    - 如何使用本书: chapter_about/how_to_read.md
-    - 编程环境安装: chapter_about/installation.md
-    - 一起参与创作: chapter_about/contribution.md
-    - License: chapter_about/license.md
-  - 算法无处不在: 
+  - 前言:
+    - chapter_introduction/index.md
+  - 如何使用本书: 
+    - 算法学习建议: chapter_prerequisites/suggestions.md
+    - 编程环境安装: chapter_prerequisites/installation.md
+    - 一起参与创作: chapter_prerequisites/contribution.md
+  - 算法是什么: 
     - chapter_dsa_introduction/index.md
   - 计算复杂度:
     - 算法效率评估: chapter_computational_complexity/performance_evaluation.md
     - 时间复杂度: chapter_computational_complexity/time_complexity.md
     - 空间复杂度: chapter_computational_complexity/space_complexity.md
-    - 权衡时间与空间: chapter_computational_complexity/space_time_tradeoff.md
+    - 权衡时间与空间 *: chapter_computational_complexity/space_time_tradeoff.md
     - 小结: chapter_computational_complexity/summary.md
   - 数据结构简介: 
     - 数据与内存: chapter_data_structure/data_and_memory.md
@@ -134,7 +134,7 @@ nav:
   - 数组与链表: 
     - 数组（Array）: chapter_array_and_linkedlist/array.md
     - 链表（LinkedList）: chapter_array_and_linkedlist/linked_list.md
-    - 列表（List）: chapter_array_and_linkedlist/list.md
+    - 列表（List）*: chapter_array_and_linkedlist/list.md
     - 小结: chapter_array_and_linkedlist/summary.md
   - 栈与队列:
     - 栈（Stack）: chapter_stack_and_queue/stack.md
@@ -149,6 +149,7 @@ nav:
   - 查找算法:
     - 线性查找: chapter_searching/linear_search.md
     - 二分查找: chapter_searching/binary_search.md
+    - 哈希查找: chapter_searching/hashing_search.md
     - 小结: chapter_searching/summary.md
   - 参考文献:
     - chapter_reference/index.md
