--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ extra:
       link: https://twitter.com/krahets
     - icon: fontawesome/solid/code 
       link: https://leetcode.cn/u/jyd/
-  # generator: false
+  generator: false
 
 # Plugins
 plugins:
