--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -154,7 +154,7 @@ nav:
     - 二叉树（Binary Tree）: chapter_tree/binary_tree.md
     - 二叉树常见类型: chapter_tree/binary_tree_types.md
     - 二叉搜索树: chapter_tree/binary_search_tree.md
-    - AVL 树: chapter_tree/avl_tree.md
+    - AVL 树 *: chapter_tree/avl_tree.md
     - 小结: chapter_tree/summary.md
   - 查找算法:
     - 线性查找: chapter_searching/linear_search.md
