Enable copy to clipboard button

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ theme:
   features:
     - announce.dismiss
     - content.code.annotate
+    - content.code.copy
     - content.tabs.link
     - content.tooltips
     # - header.autohide
