Update C# folder name.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ theme:
     # - navigation.tabs
     # - navigation.tabs.sticky
     # - navigation.top
+    - navigation.footer
     - navigation.tracking
     - search.highlight
     - search.share
