fixed: several bugs

--- a/codes/typescript/tsconfig.json
+++ b/codes/typescript/tsconfig.json
@@ -3,9 +3,8 @@
     "target": "es6",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "module": "esnext",
+    "module": "commonjs",
     "strict": true,
-    "importHelpers": true,
     "noEmit": false,
     "sourceMap": true,
     "baseUrl": ".",
