feat(tree): add C codes

--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(include)
 add_subdirectory(chapter_computational_complexity)
 add_subdirectory(chapter_array_and_linkedlist)
 add_subdirectory(chapter_sorting)
+add_subdirectory(chapter_tree)
