--- a/.gitattributes
+++ b/.gitattributes
@@ -3,12 +3,12 @@
 *.py linguist-language=Python
 *.cpp linguist-language=C++
 *.c linguist-language=C++
+*.zig linguist-language=C++
 *.go linguist-language=Go
 *.js linguist-language=JavaScript
 *.ts linguist-language=JavaScript
 *.swift linguist-language=Swift
 
-*.zig linguist-language=Zig
 *.rs linguist-language=Other
 
 *.html linguist-detectable=false
