--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,9 @@
 *.cs linguist-language=Java
 *.py linguist-language=Python
 *.cpp linguist-language=C++
+*.hpp linguist-language=C++
 *.c linguist-language=C++
+*.h linguist-language=C++
 *.go linguist-language=Go
 *.js linguist-language=JavaScript
 *.ts linguist-language=JavaScript
