--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -1,6 +1,36 @@
+[package]
+name = "hello-algo-rust"
+version = "0.1.0"
+edition = "2021"
 
-[workspace]
-members = [
-    "chapter_computational_complexity",
-    "chapter_array_and_linkedlist"
-]
+[lib]
+name = "inc"
+path = "include/include.rs"
+
+# Run Command: cargo run --bin time_complexity
+[[bin]]
+name = "time_complexity"
+path = "chapter_computational_complexity/time_complexity.rs"
+
+# Run Command: cargo run --bin worst_best_time_complexity
+[[bin]]
+name = "worst_best_time_complexity"
+path = "chapter_computational_complexity/worst_best_time_complexity.rs"
+
+# Run Command: cargo run --bin leetcode_two_sum
+[[bin]]
+name = "leetcode_two_sum"
+path = "chapter_computational_complexity/leetcode_two_sum.rs"
+
+# Run Command: cargo run --bin array
+[[bin]]
+name = "array"
+path = "chapter_array_and_linkedlist/array.rs"
+
+# Run Command: cargo run --bin list
+[[bin]]
+name = "list"
+path = "chapter_array_and_linkedlist/list.rs"
+
+[dependencies]
+rand = "0.8.5"
