--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -59,6 +59,11 @@ path = "chapter_searching/binary_search.rs"
 name = "bubble_sort"
 path = "chapter_sorting/bubble_sort.rs"
 
+# Run Command: cargo run --bin insertion_sort
+[[bin]]
+name = "insertion_sort"
+path = "chapter_sorting/insertion_sort.rs"
+
 # Run Command: cargo run --bin array_stack
 [[bin]]
 name = "array_stack"
