--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -64,6 +64,11 @@ path = "chapter_sorting/bubble_sort.rs"
 name = "insertion_sort"
 path = "chapter_sorting/insertion_sort.rs"
 
+# Run Command: cargo run --bin merge_sort
+[[bin]]
+name = "merge_sort"
+path = "chapter_sorting/merge_sort.rs"
+
 # Run Command: cargo run --bin array_stack
 [[bin]]
 name = "array_stack"
