--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,6 +132,7 @@ nav:
   - 1. &nbsp; &nbsp; 引言:
     - 1.1. &nbsp; 算法无处不在: chapter_introduction/algorithms_are_everywhere.md
     - 1.2. &nbsp; 算法是什么: chapter_introduction/what_is_dsa.md
+    - 1.3. &nbsp; 小结: chapter_introduction/summary.md
   - 2. &nbsp; &nbsp; 计算复杂度:
     - 2.1. &nbsp; 算法效率评估: chapter_computational_complexity/performance_evaluation.md
     - 2.2. &nbsp; 时间复杂度: chapter_computational_complexity/time_complexity.md
@@ -165,10 +166,12 @@ nav:
   - 8. &nbsp; &nbsp; 堆:
     - 8.1. &nbsp; 堆（Heap）: chapter_heap/heap.md
     - 8.2. &nbsp; 建堆操作 *: chapter_heap/build_heap.md
+    - 8.3. &nbsp; 小结: chapter_heap/summary.md
   - 9. &nbsp; &nbsp; 图:
     - 9.1. &nbsp; 图（Graph）: chapter_graph/graph.md
     - 9.2. &nbsp; 图基础操作: chapter_graph/graph_operations.md
     - 9.3. &nbsp; 图的遍历: chapter_graph/graph_traversal.md
+    - 9.4. &nbsp; 小结: chapter_graph/summary.md
   - 10. &nbsp; &nbsp; 查找算法:
     - 10.1. &nbsp; 线性查找: chapter_searching/linear_search.md
     - 10.2. &nbsp; 二分查找: chapter_searching/binary_search.md
