--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,13 +127,11 @@ nav:
   - 0. &nbsp; &nbsp; 写在前面:
     - 0.1. &nbsp; 关于本书: chapter_preface/about_the_book.md
     - 0.2. &nbsp; 如何使用本书: chapter_preface/suggestions.md
-    - 0.3. &nbsp; 编程环境安装: chapter_preface/installation.md
-    - 0.4. &nbsp; 一起参与创作: chapter_preface/contribution.md
   - 1. &nbsp; &nbsp; 引言:
     - 1.1. &nbsp; 算法无处不在: chapter_introduction/algorithms_are_everywhere.md
     - 1.2. &nbsp; 算法是什么: chapter_introduction/what_is_dsa.md
     - 1.3. &nbsp; 小结: chapter_introduction/summary.md
-  - 2. &nbsp; &nbsp; 计算复杂度:
+  - 2. &nbsp; &nbsp; 复杂度分析:
     - 2.1. &nbsp; 算法效率评估: chapter_computational_complexity/performance_evaluation.md
     - 2.2. &nbsp; 时间复杂度: chapter_computational_complexity/time_complexity.md
     - 2.3. &nbsp; 空间复杂度: chapter_computational_complexity/space_complexity.md
@@ -184,5 +182,8 @@ nav:
     - 11.4. &nbsp; 快速排序: chapter_sorting/quick_sort.md
     - 11.5. &nbsp; 归并排序: chapter_sorting/merge_sort.md
     - 11.6. &nbsp; 小结: chapter_sorting/summary.md
+  - 12. &nbsp; &nbsp; 附录:
+    - 12.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
+    - 12.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
   - 参考文献:
     - chapter_reference/index.md
