--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -49,15 +49,30 @@ path = "chapter_array_and_linkedlist/my_list.rs"
 name = "stack"
 path = "chapter_stack_and_queue/stack.rs"
 
+# Run Command: cargo run --bin linkedlist_stack
+[[bin]]
+name = "linkedlist_stack"
+path = "chapter_stack_and_queue/linkedlist_stack.rs"
+
 # Run Command: cargo run --bin queue
 [[bin]]
 name = "queue"
 path = "chapter_stack_and_queue/queue.rs"
 
+# Run Command: cargo run --bin linkedlist_queue
+[[bin]]
+name = "linkedlist_queue"
+path = "chapter_stack_and_queue/linkedlist_queue.rs"
+
 # Run Command: cargo run --bin deque
 [[bin]]
 name = "deque"
 path = "chapter_stack_and_queue/deque.rs"
+
+# Run Command: cargo run --bin linkedlist_deque
+[[bin]]
+name = "linkedlist_deque"
+path = "chapter_stack_and_queue/linkedlist_deque.rs"
 
 # Run Command: cargo run --bin hash_map
 [[bin]]
