feat: add C hash map

--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(chapter_sorting)
 add_subdirectory(chapter_tree)
 add_subdirectory(chapter_stack_and_queue)
 add_subdirectory(chapter_heap)
+add_subdirectory(chapter_hashing)
