--- a/codes/c/include/CMakeLists.txt
+++ b/codes/c/include/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(include
         include_test.c
         include.h print_util.h
-        list_node.h tree_node.h)
+        list_node.h tree_node.h
+        uthash.h)
