--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,7 +177,7 @@ nav:
     - 10.3. &nbsp; 哈希查找: chapter_searching/hashing_search.md
     - 10.4. &nbsp; 小结: chapter_searching/summary.md
   - 11. &nbsp; &nbsp; 排序算法:
-    - 11.1. &nbsp; 排序简介: chapter_sorting/intro_to_sort.md
+    - 11.1. &nbsp; 排序算法: chapter_sorting/sorting_algorithm.md
     - 11.2. &nbsp; 冒泡排序: chapter_sorting/bubble_sort.md
     - 11.3. &nbsp; 插入排序: chapter_sorting/insertion_sort.md
     - 11.4. &nbsp; 快速排序: chapter_sorting/quick_sort.md
@@ -186,8 +186,10 @@ nav:
     - 11.7. &nbsp; 计数排序（New）: chapter_sorting/counting_sort.md
     - 11.8. &nbsp; 基数排序（New）: chapter_sorting/radix_sort.md
     - 11.9. &nbsp; 小结: chapter_sorting/summary.md
-  - 12. &nbsp; &nbsp; 附录:
-    - 12.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
-    - 12.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
+  - 12. &nbsp; &nbsp; 回溯算法:
+    - 12.1. &nbsp; 回溯算法: chapter_backtracking/backtracking_algorithm.md
+  - 13. &nbsp; &nbsp; 附录:
+    - 13.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
+    - 13.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
   - 参考文献:
     - chapter_reference/index.md
