--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,15 @@
 *.java linguist-language=Java
-*.cs linguist-language=Java
 *.py linguist-language=Python
 *.cpp linguist-language=C++
 *.hpp linguist-language=C++
-*.c linguist-language=C++
-*.h linguist-language=C++
+*.c linguist-language=C
+*.h linguist-language=C
 *.go linguist-language=Go
 *.js linguist-language=JavaScript
-*.ts linguist-language=JavaScript
+*.ts linguist-language=TypeScript
 *.swift linguist-language=Swift
 
+*.cs linguist-language=Other
 *.zig linguist-language=Other
 *.rs linguist-language=Other
 *.html linguist-detectable=false
