Refactor the articles related to searching algorithm. Add the chapter of binary search. Add the section of searching algorithm revisited.

--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -8,7 +8,9 @@ include_directories(./include)
 add_subdirectory(include)
 add_subdirectory(chapter_computational_complexity)
 add_subdirectory(chapter_array_and_linkedlist)
-add_subdirectory(chapter_sorting)
-add_subdirectory(chapter_tree)
 add_subdirectory(chapter_stack_and_queue)
+add_subdirectory(chapter_binary_search)
+add_subdirectory(chapter_tree)
 add_subdirectory(chapter_heap)
+add_subdirectory(chapter_sorting)
+add_subdirectory(chapter_searching)
