Add the separation chain implementation of hashtable in c.

--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(chapter_stack_and_queue)
 add_subdirectory(chapter_binary_search)
 add_subdirectory(chapter_heap)
 add_subdirectory(chapter_searching)
+add_subdirectory(chapter_hashtable)
