--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -9,8 +9,9 @@ add_subdirectory(include)
 add_subdirectory(chapter_computational_complexity)
 add_subdirectory(chapter_array_and_linkedlist)
 add_subdirectory(chapter_stack_and_queue)
+add_subdirectory(chapter_heap)
+add_subdirectory(chapter_hashing)
 add_subdirectory(chapter_binary_search)
 add_subdirectory(chapter_tree)
-add_subdirectory(chapter_heap)
 add_subdirectory(chapter_searching)
 add_subdirectory(chapter_sorting)
