--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -181,14 +181,15 @@ nav:
     - 10.5. &nbsp; 小结: chapter_searching/summary.md
   - 11. &nbsp; &nbsp; 排序算法:
     - 11.1. &nbsp; 排序算法: chapter_sorting/sorting_algorithm.md
-    - 11.2. &nbsp; 冒泡排序: chapter_sorting/bubble_sort.md
-    - 11.3. &nbsp; 插入排序: chapter_sorting/insertion_sort.md
-    - 11.4. &nbsp; 快速排序: chapter_sorting/quick_sort.md
-    - 11.5. &nbsp; 归并排序: chapter_sorting/merge_sort.md
-    - 11.6. &nbsp; 桶排序: chapter_sorting/bucket_sort.md
-    - 11.7. &nbsp; 计数排序: chapter_sorting/counting_sort.md
-    - 11.8. &nbsp; 基数排序: chapter_sorting/radix_sort.md
-    - 11.9. &nbsp; 小结: chapter_sorting/summary.md
+    - 11.2. &nbsp; 选择排序: chapter_sorting/selection_sort.md
+    - 11.3. &nbsp; 冒泡排序: chapter_sorting/bubble_sort.md
+    - 11.4. &nbsp; 插入排序: chapter_sorting/insertion_sort.md
+    - 11.5. &nbsp; 快速排序: chapter_sorting/quick_sort.md
+    - 11.6. &nbsp; 归并排序: chapter_sorting/merge_sort.md
+    - 11.7. &nbsp; 桶排序: chapter_sorting/bucket_sort.md
+    - 11.8. &nbsp; 计数排序: chapter_sorting/counting_sort.md
+    - 11.9. &nbsp; 基数排序: chapter_sorting/radix_sort.md
+    - 11.10. &nbsp; 小结: chapter_sorting/summary.md
   - 12. &nbsp; &nbsp; 回溯算法:
     - 12.1. &nbsp; 回溯算法（New）: chapter_backtracking/backtracking_algorithm.md
     - 12.2. &nbsp; 全排列问题（New）: chapter_backtracking/permutations_problem.md
