--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(chapter_binary_search)
 add_subdirectory(chapter_tree)
 add_subdirectory(chapter_searching)
 add_subdirectory(chapter_sorting)
+add_subdirectory(chapter_backtracking)
