--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -175,8 +175,9 @@ nav:
   - 8. &nbsp; &nbsp; 堆:
     - chapter_heap/index.md
     - 8.1. &nbsp; 堆: chapter_heap/heap.md
-    - 8.2. &nbsp; 建堆操作 *: chapter_heap/build_heap.md
-    - 8.3. &nbsp; 小结: chapter_heap/summary.md
+    - 8.2. &nbsp; 建堆操作: chapter_heap/build_heap.md
+    - 8.3. &nbsp; Top-K 问题: chapter_heap/top_k.md
+    - 8.4. &nbsp; 小结: chapter_heap/summary.md
   - 9. &nbsp; &nbsp; 图:
     - chapter_graph/index.md
     - 9.1. &nbsp; 图: chapter_graph/graph.md
