--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,9 +161,10 @@ nav:
     - 5.4. &nbsp; 小结: chapter_stack_and_queue/summary.md
   - 6. &nbsp; &nbsp; 散列表:
     - chapter_hashing/index.md
-    - 6.1. &nbsp; 哈希表: chapter_hashing/hash_map.md
+    - 6.1. &nbsp; 哈希表（New）: chapter_hashing/hash_map.md
     - 6.2. &nbsp; 哈希冲突（New）: chapter_hashing/hash_collision.md
-    - 6.3. &nbsp; 小结: chapter_hashing/summary.md
+    - 6.3. &nbsp; 哈希算法（New）: chapter_hashing/hash_algorithm.md
+    - 6.4. &nbsp; 小结: chapter_hashing/summary.md
   - 7. &nbsp; &nbsp; 树:
     - chapter_tree/index.md
     - 7.1. &nbsp; 二叉树: chapter_tree/binary_tree.md
