--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -212,8 +212,11 @@ nav:
     - 12.3. &nbsp; 子集和问题（New）: chapter_backtracking/subset_sum_problem.md
     - 12.4. &nbsp; N 皇后问题: chapter_backtracking/n_queens_problem.md
     - 12.5. &nbsp; 小结: chapter_backtracking/summary.md
-  - 13. &nbsp; &nbsp; 附录:
-    - 13.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
-    - 13.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
+  - 13. &nbsp; &nbsp; 动态规划:
+    - chapter_dynamic_programming/index.md
+    - 13.1. &nbsp; 初识动态规划: chapter_dynamic_programming/intro_to_dynamic_programming.md
+  - 14. &nbsp; &nbsp; 附录:
+    - 14.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
+    - 14.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
   - 参考文献:
     - chapter_reference/index.md
