--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,12 +124,12 @@ extra_css:
 
 # Page tree
 nav:
-  - 0. &nbsp; &nbsp; 写在前面:
+  - 0. &nbsp; &nbsp; 前言:
     - chapter_preface/index.md
     - 0.1. &nbsp; 关于本书: chapter_preface/about_the_book.md
     - 0.2. &nbsp; 如何使用本书: chapter_preface/suggestions.md
     - 0.3. &nbsp; 小结: chapter_preface/summary.md
-  - 1. &nbsp; &nbsp; 引言:
+  - 1. &nbsp; &nbsp; 初识算法:
     - chapter_introduction/index.md
     - 1.1. &nbsp; 算法无处不在: chapter_introduction/algorithms_are_everywhere.md
     - 1.2. &nbsp; 算法是什么: chapter_introduction/what_is_dsa.md
@@ -214,7 +214,7 @@ nav:
     - 12.5. &nbsp; 小结: chapter_backtracking/summary.md
   - 13. &nbsp; &nbsp; 动态规划:
     - chapter_dynamic_programming/index.md
-    - 13.1. &nbsp; 初识动态规划: chapter_dynamic_programming/intro_to_dynamic_programming.md
+    - 13.1. &nbsp; 初探动态规划: chapter_dynamic_programming/intro_to_dynamic_programming.md
   - 14. &nbsp; &nbsp; 附录:
     - 14.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
     - 14.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
