Update CMakeLists.txt for c code of graph

--- a/codes/c/CMakeLists.txt
+++ b/codes/c/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(chapter_hashing)
 add_subdirectory(chapter_tree)
 add_subdirectory(chapter_searching)
 add_subdirectory(chapter_sorting)
+add_subdirectory(chapter_graph)
